# optparse-invertible

./: .gitignore  CHANGELOG.md  Example.hs  LICENSE  cabal.project  optparse-invertible.cabal
exe/: Basic.hs  Opts.hs
src/Data/: Option.hs
src/Data/CLI/: Option.hs
src/Options/: Invertible.hs
